# cheapest-insertion-heuristics

./: .~lock.data.xlsx#  Graph.py  Product.py  README.md  cheapest_insertion_main.ipynb  data.xlsx  main.py  pyproject.toml
